--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,6 +33,8 @@ dependencies {
     compile 'com.android.volley:volley:1.0.0'
     // Card View
     compile 'com.android.support:cardview-v7:25.1.0'
+    //OKhttp
+    compile 'com.squareup.okhttp3:okhttp:3.5.0'
 
 
 }
