--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,8 @@
         <activity
             android:name=".MainActivity"
             android:label="Create Account"
-            android:theme="@style/AppTheme_NoActionBar_FullScreen"></activity>
+            android:theme="@style/AppTheme_NoActionBar_FullScreen">
+        </activity>
         <activity
             android:name=".LoginActivity"
             android:label="Sign in"
@@ -29,7 +30,14 @@
         <activity
             android:name=".HomeActivity"
             android:label="Home"
-            android:theme="@style/AppTheme"></activity>
+            android:theme="@style/AppTheme">
+
+        </activity>
+
+        <activity android:name=".Revenue_Account"
+                   android:label="Create Revenue Account">
+
+        </activity>
 
     </application>
 
