--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,7 +4,7 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
     <application
         android:allowBackup="true"
@@ -12,35 +12,34 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-
         <activity
             android:name=".MainActivity"
             android:theme="@style/AppTheme_NoActionBar_FullScreen" />
-
         <activity
             android:name=".LoginActivity"
             android:theme="@style/AppTheme_NoActionBar_FullScreen" />
-
         <activity
             android:name=".AccoutSelectionActivity"
             android:theme="@style/AppTheme_NoActionBar_FullScreen">
+
+        </activity>
+        <activity
+            android:name=".RechargeActivity"
+            android:theme="@style/AppTheme_NoActionBar_FullScreen" />
+        <activity
+            android:name=".SpendActivity"
+            android:theme="@style/AppTheme_NoActionBar_FullScreen" />
+        <activity
+            android:name=".RefundActivity"
+            android:theme="@style/AppTheme_NoActionBar_FullScreen" />
+        <activity android:name=".SplashScreenActivity"
+            android:theme="@style/AppTheme_NoActionBar_FullScreen" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
-        <activity
-            android:name=".RechargeActivity"
-            android:theme="@style/AppTheme_NoActionBar_FullScreen" />
-
-        <activity android:name=".SpendActivity"
-            android:theme="@style/AppTheme_NoActionBar_FullScreen"/>
-
-        <activity android:name=".RefundActivity"
-            android:theme="@style/AppTheme_NoActionBar_FullScreen"/>
-
     </application>
 
 </manifest>
